<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:labelFor="@+id/constraint_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".CafeDetail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/primary_shape_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/gambar_cafe_detail"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/nama_cafe_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nama_cafe"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/gambar_cafe_detail"
            app:layout_constraintStart_toStartOf="@+id/gambar_cafe_detail"
            app:layout_constraintTop_toBottomOf="@+id/gambar_cafe_detail" />

        <TextView
            android:id="@+id/alamat_cafe_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/alamat_cafe"
            app:layout_constraintEnd_toEndOf="@+id/nama_cafe_detail"
            app:layout_constraintStart_toStartOf="@+id/nama_cafe_detail"
            app:layout_constraintTop_toBottomOf="@+id/nama_cafe_detail" />

        <TextView
            android:id="@+id/about_cafe_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/about"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alamat_cafe_detail" />

        <TextView
            android:id="@+id/deskripsi_cafe_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/deskripsi_cafe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/about_cafe_detail"
            app:layout_constraintTop_toBottomOf="@+id/about_cafe_detail" />

        <TextView
            android:id="@+id/menu_cafe_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/menu"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deskripsi_cafe_detail" />


        <ImageView
            android:id="@+id/gambar_menu_detail"
            android:layout_width="220dp"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/menu_cafe_detail"
            app:layout_constraintTop_toBottomOf="@+id/menu_cafe_detail"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            app:layout_constraintBottom_toTopOf="@+id/action_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gambar_menu_detail">

        </Space>

        <Button
            android:id="@+id/action_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/deskripsi_cafe_detail"
            app:layout_constraintStart_toStartOf="@+id/deskripsi_cafe_detail" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

